<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/addstash_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"
        android:text="@string/addstash_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/addstash_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addstash_header"
        android:hint="@string/addstash_nama"
        android:layout_margin="3dp"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/addstash_norek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addstash_nama"
        android:hint="@string/addstash_norek"
        android:layout_margin="3dp"
        android:inputType="text|numberDecimal" >
    </EditText>
    
    <EditText
        android:id="@+id/addstash_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addstash_norek"
        android:hint="@string/addstash_jumlah"
        android:layout_margin="3dp"
        android:inputType="text|numberDecimal" >
    </EditText>

</RelativeLayout>